<resources>
    <string name="app_name_kana">ロケット</string>
    <string name="app_name">Roketto</string>
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="eventsTitle">Upcoming Events</string>
    <string name="eventsSeeAll">SEE ALL</string>
    <string name="seeMoreString">See more</string>
    <string name="astroString">Trending Astronauts</string>
    <string name="description">Description</string>
    <string name="launch">Launch</string>
    <string name="station">Station</string>
    <string name="expedition">Expedition</string>
    <string name="program">Program</string>
    <string name="recentnews">Recent News</string>
    <string name="human_exp">HUMAN EXPLORATION</string>
    <string name="astro_launches">Spaceflight Record</string>
    <string name="about">About</string>
    <string name="agency">Agency</string>
    <string name="specification">Specification</string>
    <string name="min_stage">Min Stage:</string>
    <string name="max_stage">Max Stage:</string>
    <string name="length">Length:</string>
    <string name="diameter">Diameter:</string>
    <string name="fairing_diameter">Fairing diameter:</string>
    <string name="signin">Sign in with Google</string>
    <string name="signin_email">Sign in with email</string>
    <string name="roketto">Roketto</string>
    <string name="signin_txt">Sign in</string>
    <string name="signup_txt">Sign up</string>
    <string name="loginasguest">Continue as a guest</string>
    <string name="rokettogiappo">ロケット</string>
    <string name="rokettotag">Space at your fingertips</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="signup">Sign up</string>
    <string name="taglogin">Do you already have an account? <u>Log in from here</u></string>
    <string name="tagsignup">Do not have an account? <u>Sign up from here</u></string>

    <string name="launch_mass">Launch mass:</string>
    <string name="thrust">Thrust:</string>
    <string name="family_title">Family</string>
    <string name="family">Family:</string>
    <string name="name">Name:</string>
    <string name="alias">Alias:</string>
    <string name="variant">Variant:</string>
    <string name="full_name">Full name:</string>
    <string name="payload_capacity">Payload capacity</string>
    <string name="launch_cost">Launch cost:</string>
    <string name="low_earth_orbit">Low Earth orbit:</string>
    <string name="geo_tra">Geostationary transfer orbit:</string>
    <string name="direct_geo">Direct Geostationary:</string>
    <string name="sun_sync">Sun-Synchronous Capacity:</string>
    <string name="crew">Crew</string>
    <string name="Agency">Agency</string>
    <string name="form_email_address">Email address</string>
    <string name="form_password">Password</string>
    <string name="email_signin">Sign in with email</string>
    <string name="google_signin">Sign in with Google</string>
    <string name="email_signup">Sign up with email</string>
    <string name="skip_login">Skip login</string>
    <string name="registration_failure">An error occurred</string>
    <string name="favourite_button_description">Favourite button</string>
    <string name="home_button_description">Home button</string>
    <string name="event_image_description">Event image</string>
    <string name="favorites_events">Favorites events</string>
    <string name="logout_text">Account</string>
    <string name="logout">Logout</string>
    <string name="clear_cache_text">Memory</string>
    <string name="clear_cache">Clear cache</string>
    <string name="about_api_text">APIs:</string>
    <string name="about_launch_api">The Space Devs</string>
    <string name="about_news_api">Spaceflight News</string>
    <string name="about_news">News sites:</string>
    <string name="about_us">About us:</string>
    <string name="app_description">Roketto is an application to keep track of space events and to check information about astronauts, agencies, and much more!</string>
    <string name="app_icon_description">Application icon</string>
    <string name="about_us_name_1">Davide Costantini</string>
    <string name="about_us_name_2">Samuele Simone</string>
    <string name="about_us_name_3">Lorenzo Occhipinti</string>
    <string name="about_us_name_4">Khalil Mohamed Khalil</string>
    <string name="about_us_image_description_1">About us image 1</string>
    <string name="about_us_image_description_2">About us image 2</string>
    <string name="about_us_image_description_3">About us image 3</string>
    <string name="about_us_image_description_4">About us image 4</string>
    <string name="about_us_matricola_1">856114</string>
    <string name="about_us_matricola_2">851693</string>
    <string name="about_us_matricola_3">844960</string>
    <string name="about_us_matricola_4">852259</string>
    <string name="connection_error">Connection error.</string>
    <string name="password_error">Passwords do not match.</string>
    <string name="password_icon">Password icon</string>
    <string name="email_icon">Email icon</string>
    <string name="background_image">Background image</string>
</resources>