<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/sfondologin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/background_image"
            android:src="@drawable/ic_undraw_outer_space_re_u9vd_1" />

        <TextView
            android:id="@+id/titlelogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:fontFamily="@font/montserratbold"
            android:text="@string/roketto"
            android:textColor="@color/white"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/descrlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titlelogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/montserratbold"
            android:text="@string/rokettogiappo"
            android:textColor="@color/white"
            android:textSize="32sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/rokettotag"
            android:textStyle="italic"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_marginTop="6dp"
            android:id="@+id/taglogin"
            android:layout_below="@id/descrlogin"
            >
        </TextView>

        <Button
            android:id="@+id/btnLoginGoogle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignBottom="@+id/sfondologin"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/ic_flat_color_icons_google"
            android:text="@string/signin"
            android:textAllCaps="false"
            android:textColor="@color/black">

        </Button>

        <Button
            android:id="@+id/btnSigninEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/btnLoginGoogle"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/ic_baseline_email_24"
            android:text="@string/signin_email"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnSigninAsGuest"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/btnSigninEmail"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="#b1b1b1"
            android:drawableLeft="@drawable/ic_fa_solid_user_astronaut"
            android:text="@string/loginasguest"
            android:textAllCaps="false"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/linkSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSigninAsGuest"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="32dp"
            android:autoLink="all"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:linksClickable="false"
            android:selectAllOnFocus="false"
            android:text="@string/tagsignup"
            android:textColor="@color/black">

        </TextView>
    </RelativeLayout>
</ScrollView>