<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/sfondologin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_undraw_outer_space_re_u9vd_1"></ImageView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/roketto"
        android:fontFamily="@font/montserratbold"
        android:textSize="48sp"
        android:textColor="@color/white"
        android:layout_marginTop="150dp"
        android:id="@+id/titlelogin"
        >
    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/rokettogiappo"
        android:fontFamily="@font/montserratbold"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:layout_marginTop="6dp"
        android:id="@+id/descrlogin"
        android:layout_below="@id/titlelogin"
        >
    </TextView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/rokettotag"
        android:textStyle="italic"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:layout_marginTop="6dp"
        android:id="@+id/taglogin"
        android:layout_below="@id/descrlogin"
        >
    </TextView>

    <Button
        android:text="@string/signin"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/ic_flat_color_icons_google"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:layout_height="50dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:id="@+id/btnLoginGoogle"
        android:layout_marginRight="20dp"
        android:layout_alignBottom="@+id/sfondologin"
        >

    </Button>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/btnLoginGoogle"
        android:layout_marginTop="16dp"
        android:text="@string/signin_email"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:id="@+id/btnSignup"
        ></Button>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSignup"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        android:clickable="true"
        android:text="@string/tagsignup"
        android:gravity="center"
        android:selectAllOnFocus="false"
        android:linksClickable="false"
        android:autoLink="all"
        android:id="@+id/linkSignup"
        android:layout_marginBottom="32dp"
        android:textColor="@color/black">

    </TextView>
</RelativeLayout>
</ScrollView>