<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/sfondologin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/background_image"
            android:src="@drawable/ic_undraw_outer_space_re_u9vd_1" />

        <TextView
            android:id="@+id/titlelogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:fontFamily="@font/montserratbold"
            android:text="@string/roketto"
            android:textColor="@color/white"
            android:textSize="48sp" />

        <TextView
            android:id="@+id/descrlogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/titlelogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:fontFamily="@font/montserratbold"
            android:text="@string/rokettogiappo"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/taglogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/descrlogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="6dp"
            android:text="@string/rokettotag"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="italic" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/taglogin"
            android:layout_marginTop="32dp"
            android:id="@+id/cardSignup"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="16dp"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/txtSignup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/montserratbold"
                    android:text="@string/signin_txt"
                    android:textColor="@color/black"
                    android:textSize="32sp">

                </TextView>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_akar_icons_person"
                    android:layout_below="@id/txtSignup"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="8dp"

                    android:id="@+id/iconPerson"
                    android:contentDescription="@string/email_icon">
                </ImageView>

                <EditText
                    android:id="@+id/editEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtSignup"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_toEndOf="@+id/iconPerson"
                    android:autofillHints="emailAddress"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:minLines="1" />

                <ImageView
                    android:id="@+id/iconPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iconPerson"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:contentDescription="@string/password_icon"
                    android:src="@drawable/ic_ri_lock_password_line" />

                <EditText
                    android:id="@+id/editPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/editEmail"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="32dp"
                    android:layout_toEndOf="@+id/iconPerson"
                    android:autofillHints="password"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword" />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnSigninEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@+id/cardSignup"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="60dp"
            android:text="@string/signin_txt"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/linkSignup2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSigninEmail"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="32dp"
            android:autoLink="all"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:linksClickable="false"
            android:selectAllOnFocus="false"
            android:text="@string/tagsignup"
            android:textColor="@color/black" />

    </RelativeLayout>
</ScrollView>